--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,14 +59,40 @@ nav.scrolled {
 .albuns {
     padding: 10px 0;
 }
-.rotate {
-    transform: rotate(30deg);
-        -webkit-transform: rotate(30deg);
-        -moz-transform: rotate(30deg);
-        -ms-transform: rotate(30deg);
-        -o-transform: rotate(30deg);
-    padding-left: 80px;
-}
+.reverse-rotate-and-fade {
+    opacity: 0;
+    animation: reverseRotateAndFade 1s forwards;
+  }
+  
+  @keyframes reverseRotateAndFade {
+    0% {
+      scale: 1;  
+      opacity: 1;
+      transform: rotate(45deg);
+    }
+    100% {
+      scale: 0.5;  
+      opacity: 0;
+      transform: rotate(90deg);
+    }
+  }
+.rotate-and-fade {
+    opacity: 0;
+    animation: rotateAndFade 1s forwards;
+  }
+  
+  @keyframes rotateAndFade {
+    0% {
+      scale: 0.5;  
+      opacity: 0;
+      transform: rotate(90deg);
+    }
+    100% {
+      scale: 1;  
+      opacity: 1;
+      transform: rotate(15deg);
+    }
+  }
 h1 {
     font-weight: 900;
     letter-spacing: -0.05em;
@@ -88,7 +114,8 @@ h3 {
         margin: 10px 15px;
     }
     #services img {
-        width: 50vw;
+        width: 100%;
+        margin-top: 1rem;
     }
 }
 @media (min-width: 576px) { 
@@ -123,7 +150,6 @@ h3 {
     border-radius: 500px;
     -webkit-border-radius: 500px;
     -moz-border-radius: 500px;
-    text-transform: uppercase;
     transition: background 0.4s, color 0.4s;
     padding: 10px 15px;
 }
@@ -158,7 +184,6 @@ footer .navbar-nav a {
 footer .navbar-nav a:hover {
     color: #9bf0e1;
     font-size: 0.6em;
-    text-transform: uppercase;
     text-decoration: none;
 }
 footer .list-unstyled li {
@@ -168,6 +193,28 @@ footer .list-unstyled li {
 }
 footer .list-unstyled li a, a:hover {
     color: #919496;
-    text-transform: uppercase;
     text-decoration: none;
 }
+
+
+
+
+
+/* 
+keyframes
+*/
+
+@keyframes popupAndFade {
+    0% {
+      opacity: 0;
+      transform: scale(0.5);
+    }
+    50% {
+      opacity: 1;
+      transform: scale(1.2);
+    }
+    100% {
+      opacity: 0;
+      transform: scale(1);
+    }
+  }
