--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,36 +63,27 @@ nav.scrolled {
     opacity: 0;
     animation: reverseRotateAndFade 1s forwards;
   }
-  
-  @keyframes reverseRotateAndFade {
-    0% {
-      scale: 1;  
-      opacity: 1;
-      transform: rotate(45deg);
-    }
-    100% {
-      scale: 0.5;  
-      opacity: 0;
-      transform: rotate(90deg);
-    }
-  }
 .rotate-and-fade {
     opacity: 0;
     animation: rotateAndFade 1s forwards;
   }
+.img-album {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    transition: all 0.4s;
+}
+.album-animation {
+    opacity: 1;
+    animation: popupAndFade 2s forwards;
+}
+.album-noAnimation {
+    opacity: 0;
+}
   
-  @keyframes rotateAndFade {
-    0% {
-      scale: 0.5;  
-      opacity: 0;
-      transform: rotate(90deg);
-    }
-    100% {
-      scale: 1;  
-      opacity: 1;
-      transform: rotate(15deg);
-    }
-  }
 h1 {
     font-weight: 900;
     letter-spacing: -0.05em;
@@ -204,6 +195,32 @@ footer .list-unstyled li a, a:hover {
 keyframes
 */
 
+@keyframes reverseRotateAndFade {
+    0% {
+      scale: 1;  
+      opacity: 1;
+      transform: rotate(45deg);
+    }
+    100% {
+      scale: 0.5;  
+      opacity: 0;
+      transform: rotate(90deg);
+    }
+}
+
+@keyframes rotateAndFade {
+    0% {
+      scale: 0.5;  
+      opacity: 0;
+      transform: rotate(90deg);
+    }
+    100% {
+      scale: 1;  
+      opacity: 1;
+      transform: rotate(15deg);
+    }
+  }
+
 @keyframes popupAndFade {
     0% {
       opacity: 0;
@@ -214,7 +231,7 @@ keyframes
       transform: scale(1.2);
     }
     100% {
-      opacity: 0;
+      opacity: 1;
       transform: scale(1);
     }
   }
