--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,6 +33,7 @@ nav.scrolled {
     background-color: rgba(255, 255, 255, 0.5);
 }
 .capa {
+    margin: auto;
     text-align: center;
 }
 .caixa {
@@ -59,6 +60,9 @@ nav.scrolled {
 .albuns {
     padding: 10px 0;
 }
+#rotate-img {
+    opacity: 0;
+}
 .reverse-rotate-and-fade {
     opacity: 0;
     animation: reverseRotateAndFade 1s forwards;
@@ -83,6 +87,19 @@ nav.scrolled {
 .album-noAnimation {
     opacity: 0;
 }
+
+.footer-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 items in a line */
+    grid-auto-rows: minmax(100px, auto); /* specify the height of each row */
+    grid-gap: 10px; /* add some space between the items */
+}
+
+.grid-item {
+    background-color: #ddd;
+    padding: 20px;
+    text-align: center;
+}
   
 h1 {
     font-weight: 900;
@@ -101,20 +118,66 @@ h3 {
     letter-spacing: -0.04em;
 }
 @media (max-width: 575.98px) {
+    
+   
+}
+@media (max-width: 767px) { 
     .btn-custon {
         margin: 10px 15px;
     }
-    #services img {
-        width: 100%;
-        margin-top: 1rem;
+    .img-album {
+        padding: 1rem 0rem;
+        border-radius: 10px;
     }
-}
-@media (min-width: 576px) { 
+    #resources-content {
+        flex-direction: column;
+    }
+    .resources-imgs {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        margin-top: 2.5rem;
+    }
+    .capa {
+        transform: translateX(-1rem);
+    }
+    #my-carousel, .carousel-inner {
+        height: 350px;
+    }
     h1 {
         font-size: 3em;
     }
     .btn-custon {
         margin: 10px 15px;
+    }
+    #navbar-top > li {
+        margin: 5px 0;
+        padding: 0 10px;
+        border-left: 2px solid white;
+    }
+    #navbar-top > li:hover {
+        background-color: rgba(141, 141, 141, 0.452);
+        border-radius: 15px;
+        transition: 0.2s;
+    }
+    #spotify-logo {
+        width: 150px;
+        height: 150px;
+        margin-top: -3rem;
+    }
+    .list-unstyled {
+        grid-template-columns: auto;
+    }
+    .list-unstyled > li {
+        width: 50%;
+        margin: 0 2px !important;
+        display: block;
+        height: 40px;
+        text-align: center;
+        transform: translateY(-20px);
+    }
+    .list-unstyled > li > a {
+        font-size: 2rem;
     }
 
 }
