--- a/src/css/style.css
+++ b/src/css/style.css
@@ -226,10 +226,19 @@ footer {
     background: #000;
     padding: 50px 0px 20px 0px;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: start;
 }
 footer h4 { 
     color: #919496;
     font-size: 0.8em;
+}
+footer .footer-grid {
+    display: flex;
+    justify-content: space-between;
 }
 footer .navbar-nav a {
     color: white;
@@ -241,17 +250,23 @@ footer .navbar-nav a:hover {
     text-decoration: none;
 }
 footer .list-unstyled li {
-    float: right;
-    margin: 0 10px;
-    font-size: 3em;
+    display: block;
+    height: 50px;
+    padding: 0;
+    text-align: center;
 }
 footer .list-unstyled li a, a:hover {
     color: #919496;
     text-decoration: none;
+    font-size: 1.5rem;
+    
 }
-
-
-
+#spotify-logo {
+    width: 200px;
+    height: 200px;
+    margin-top: -6rem;
+    margin-bottom: -2.5rem;
+}
 
 
 /* 
