--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,315 +1,323 @@
-html, body, #home {
-    height: 100vh;
-    overflow-x: hidden;
+html,
+body,
+#home {
+  height: 100vh;
+  overflow-x: hidden;
 }
 a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 body {
-    background: url(../image/capa.png), 
-                url(../image/ruido.png), 
-                linear-gradient(50deg, #ff4169, #7c26f8);
-                background-attachment: fixed;
-    font-family: helvetica, Arial, sans-serif;            
+  background: url(../image/capa.png), url(../image/ruido.png),
+    linear-gradient(50deg, #ff4169, #7c26f8);
+  background-attachment: fixed;
+  font-family: helvetica, Arial, sans-serif;
 }
 nav.navbar-transparent {
-    padding: 0.4rem 0px;
-    background: rgba(0, 0, 0, 0.6);
-    transition: 0.4s;
+  padding: 0.4rem 0px;
+  background: rgba(0, 0, 0, 0.6);
+  transition: 0.4s;
 }
 
 nav.scrolled {
-    padding: 0.2rem 0px;
-    background: black;
-    transition: 0.4s;
+  padding: 0.2rem 0px;
+  background: black;
+  transition: 0.4s;
 }
 .nav-item {
-    margin: 0 10px;
-    color: rgb(200, 197, 197) !important;
+  margin: 0 10px;
+  color: rgb(200, 197, 197) !important;
 }
-.navbar-light .navbar-toggler { 
-    color: rgba(255, 255, 255, .5);
-    background-color: rgba(255, 255, 255, 0.5);
+.navbar-light .navbar-toggler {
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .capa {
-    margin: auto;
-    text-align: center;
+  margin: auto;
+  text-align: center;
 }
 .caixa {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 #services {
-    background-color: white  
+  background-color: white;
 }
 #resources {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-#services h2, h3 {
-    color: #7c25f8;
+#services h2,
+h3 {
+  color: #7c25f8;
 }
 #resources h2 {
-    color: white;
+  color: white;
 }
-#resources h3, #resources p {
-    color: #9bf0e1;
+#resources h3,
+#resources p {
+  color: #9bf0e1;
 }
 .albuns {
-    padding: 10px 0;
+  padding: 10px 0;
 }
 #rotate-img {
-    opacity: 0;
+  opacity: 0;
 }
 .reverse-rotate-and-fade {
-    opacity: 0;
-    animation: reverseRotateAndFade 1s forwards;
-  }
+  opacity: 0;
+  animation: reverseRotateAndFade 1s forwards;
+}
 .rotate-and-fade {
-    opacity: 0;
-    animation: rotateAndFade 1s forwards;
-  }
+  opacity: 0;
+  animation: rotateAndFade 1s forwards;
+}
 .img-album {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    transition: all 0.4s;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  transition: all 0.4s;
 }
 .album-animation {
-    opacity: 1;
-    animation: popupAndFade 2s forwards;
+  opacity: 1;
+  animation: popupAndFade 2s forwards;
 }
 .album-noAnimation {
-    opacity: 0;
+  opacity: 0;
 }
 
 .footer-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 items in a line */
-    grid-auto-rows: minmax(100px, auto); /* specify the height of each row */
-    grid-gap: 10px; /* add some space between the items */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 items in a line */
+  grid-auto-rows: minmax(100px, auto); /* specify the height of each row */
+  grid-gap: 10px; /* add some space between the items */
 }
 
 .grid-item {
-    background-color: #ddd;
-    padding: 20px;
-    text-align: center;
+  background-color: #ddd;
+  padding: 20px;
+  text-align: center;
 }
-  
+
 h1 {
-    font-weight: 900;
-    letter-spacing: -0.05em;
-    margin-bottom: 50px;
-    color: white;
+  font-weight: 900;
+  letter-spacing: -0.05em;
+  margin-bottom: 50px;
+  color: white;
 }
 h2 {
-    font-size: 3em;
-    font-weight: 700;
-    letter-spacing: -0.04em;
+  font-size: 3em;
+  font-weight: 700;
+  letter-spacing: -0.04em;
 }
 h3 {
-    font-size: 2em;
-    font-weight: 700;
-    letter-spacing: -0.04em;
+  font-size: 2em;
+  font-weight: 700;
+  letter-spacing: -0.04em;
 }
 @media (max-width: 575.98px) {
-    
-   
 }
-@media (max-width: 767px) { 
-    .btn-custon {
-        margin: 10px 15px;
-    }
-    .img-album {
-        padding: 1rem 0rem;
-        border-radius: 10px;
-    }
-    #resources-content {
-        flex-direction: column;
-    }
-    .resources-imgs {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        margin-top: 2.5rem;
-    }
-    .capa {
-        transform: translateX(-1rem);
-    }
-    #my-carousel, .carousel-inner {
-        height: 350px;
-    }
-    h1 {
-        font-size: 3em;
-    }
-    .btn-custon {
-        margin: 10px 15px;
-    }
-    #navbar-top > li {
-        margin: 5px 0;
-        padding: 0 10px;
-        border-left: 2px solid white;
-    }
-    #navbar-top > li:hover {
-        background-color: rgba(141, 141, 141, 0.452);
-        border-radius: 15px;
-        transition: 0.2s;
-    }
-    #spotify-logo {
-        width: 150px;
-        height: 150px;
-        margin-top: -3rem;
-    }
-    .list-unstyled {
-        grid-template-columns: auto;
-    }
-    .list-unstyled > li {
-        width: 50%;
-        margin: 0 2px !important;
-        display: block;
-        height: 40px;
-        text-align: center;
-        transform: translateY(-20px);
-    }
-    .list-unstyled > li > a {
-        font-size: 2rem;
-    }
-
+@media (max-width: 767px) {
+  .btn-custon {
+    margin: 10px 15px;
+  }
+  .img-album {
+    padding: 1rem 0rem;
+    border-radius: 10px;
+  }
+  #resources-content {
+    flex-direction: column;
+  }
+  .resources-imgs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-top: 2.5rem;
+  }
+  .capa {
+    transform: translateX(-1rem);
+  }
+  #my-carousel,
+  .carousel-inner {
+    height: 350px;
+  }
+  h1 {
+    font-size: 3em;
+  }
+  .btn-custon {
+    margin: 10px 15px;
+  }
+  #navbar-top > li {
+    margin: 5px 0;
+    padding: 0 10px;
+    border-left: 2px solid white;
+  }
+  #navbar-top > li:hover {
+    background-color: rgba(141, 141, 141, 0.452);
+    border-radius: 15px;
+    transition: 0.2s;
+  }
+  #spotify-logo {
+    width: 150px;
+    height: 150px;
+    margin-top: -3rem;
+  }
+  .footer-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+  .footer-grid > .navbar-nav {
+    width: 85px;
+  }
+  .list-unstyled {
+    grid-template-columns: auto;
+  }
+  .list-unstyled > li {
+    width: 50%;
+    margin: 0 2px !important;
+    display: block;
+    height: 40px;
+    text-align: center;
+    transform: translateY(-20px);
+  }
+  .list-unstyled > li > a {
+    font-size: 2rem;
+  }
 }
 
-@media (min-width: 768px) { 
-    h1 {
-        font-size: 4em;
-    }
- }
+@media (min-width: 768px) {
+  h1 {
+    font-size: 4em;
+  }
+}
 
-@media (min-width: 992px) { 
-    h1 {
-        font-size: 5em;
-    }
- }
+@media (min-width: 992px) {
+  h1 {
+    font-size: 5em;
+  }
+}
 
-@media (min-width: 1200px) { 
-    h1 {
-        font-size: 6em;
-    }
- }
- .btn-custon {
-    color: white;
-    border-radius: 500px;
-    -webkit-border-radius: 500px;
-    -moz-border-radius: 500px;
-    transition: background 0.4s, color 0.4s;
-    padding: 10px 15px;
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 6em;
+  }
+}
+.btn-custon {
+  color: white;
+  border-radius: 500px;
+  -webkit-border-radius: 500px;
+  -moz-border-radius: 500px;
+  transition: background 0.4s, color 0.4s;
+  padding: 10px 15px;
 }
 .btn-roxo {
-    background-color: #7c25f8;
+  background-color: #7c25f8;
 }
 .btn-roxo:hover {
-    background-color: #6207e3;
-    color: white;
+  background-color: #6207e3;
+  color: white;
 }
 .btn-branco {
-    border: 2px solid white;
-
+  border: 2px solid white;
 }
 .btn-branco:hover {
-    background-color: white;
-    color: black;
+  background-color: white;
+  color: black;
 }
 footer {
-    background: #000;
-    padding: 50px 0px 20px 0px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: start;
+  background: #000;
+  padding: 50px 0px 20px 0px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: start;
 }
-footer h4 { 
-    color: #919496;
-    font-size: 0.8em;
+footer h4 {
+  color: #919496;
+  font-size: 0.8em;
 }
 footer .footer-grid {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 footer .navbar-nav a {
-    color: white;
-    font-size: 0.6em;
+  color: white;
+  font-size: 0.6em;
 }
 footer .navbar-nav a:hover {
-    color: #9bf0e1;
-    font-size: 0.6em;
-    text-decoration: none;
+  color: #9bf0e1;
+  font-size: 0.6em;
+  text-decoration: none;
 }
 footer .list-unstyled li {
-    display: block;
-    height: 50px;
-    padding: 0;
-    text-align: center;
+  display: block;
+  height: 50px;
+  padding: 0;
+  text-align: center;
 }
-footer .list-unstyled li a, a:hover {
-    color: #919496;
-    text-decoration: none;
-    font-size: 1.5rem;
-    
+footer .list-unstyled li a,
+a:hover {
+  color: #919496;
+  text-decoration: none;
+  font-size: 1.5rem;
 }
 #spotify-logo {
-    width: 200px;
-    height: 200px;
-    margin-top: -6rem;
-    margin-bottom: -2.5rem;
+  width: 200px;
+  height: 200px;
+  margin-top: -6rem;
+  margin-bottom: -2.5rem;
 }
-
 
 /* 
 keyframes
 */
 
 @keyframes reverseRotateAndFade {
-    0% {
-      scale: 1;  
-      opacity: 1;
-      transform: rotate(45deg);
-    }
-    100% {
-      scale: 0.5;  
-      opacity: 0;
-      transform: rotate(90deg);
-    }
+  0% {
+    scale: 1;
+    opacity: 1;
+    transform: rotate(45deg);
+  }
+  100% {
+    scale: 0.5;
+    opacity: 0;
+    transform: rotate(90deg);
+  }
 }
 
 @keyframes rotateAndFade {
-    0% {
-      scale: 0.5;  
-      opacity: 0;
-      transform: rotate(90deg);
-    }
-    100% {
-      scale: 1;  
-      opacity: 1;
-      transform: rotate(15deg);
-    }
+  0% {
+    scale: 0.5;
+    opacity: 0;
+    transform: rotate(90deg);
   }
+  100% {
+    scale: 1;
+    opacity: 1;
+    transform: rotate(15deg);
+  }
+}
 
 @keyframes popupAndFade {
-    0% {
-      opacity: 0;
-      transform: scale(0.5);
-    }
-    50% {
-      opacity: 1;
-      transform: scale(1.2);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
   }
+  50% {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
